# campaign-data-platform

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
demo/: endpoint.py  export_excel.py  pull_to_excel.py  run_pull.py  schema_sample_google_ads.xlsx
spikes/: check_ajay_metrics.py  check_meta_linkedin_metrics.py  diag.py  list_fields.py  peek.py  probe_campaign_dates_all.py  probe_linkedin_reality.py  probe_metric_values.py  status_values.py
src/common/: config.py
src/etl/: connectors.py  normalize.py  sampling.py
src/windsor/: client.py
tests/: test_client.py  test_normalize.py
