[project]
name = "campaign-data-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "pydantic-settings>=2.3",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "responses>=0.25"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common", "src/windsor", "src/etl"]
